--- a/Swashbuckle.Demo/Swashbuckle.Demo.csproj
+++ b/Swashbuckle.Demo/Swashbuckle.Demo.csproj
@@ -94,9 +94,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="docs\custom.css" />
-    <Content Include="docs\index.html" />
-    <Content Include="docs\starting.html" />
+    <EmbeddedResource Include="docs\custom.css" />
+    <EmbeddedResource Include="docs\index.html" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -104,7 +103,6 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CourseController.cs" />
-    <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
